force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Current_Loan__c.field-meta.xml
<CustomField>
    <fullName>DM_Current_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Current Loan</label>
    <type>Checkbox</type>
</CustomField>