force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Custom_Field_10__c.field-meta.xml
<CustomField>
    <fullName>DM_Custom_Field_10__c</fullName>
    <label>DM Custom Field 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>