force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Delinquent_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Delinquent_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Unpaid bills/invoices amount on this account.</inlineHelpText>
    <label>DM Delinquent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>