force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Deposit_Interest_Accrued__c.field-meta.xml
<CustomField>
    <fullName>DM_Deposit_Interest_Accrued__c</fullName>
    <description>This field stores the sum of interest accrued for all the deposits from last accrual date of the contract.</description>
    <inlineHelpText>This field stores the sum of interest accrued for all the deposits from last accrual date of the contract.</inlineHelpText>
    <label>DM Deposit Interest Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>