force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Deposit_Interest_Posted__c.field-meta.xml
<CustomField>
    <fullName>DM_Deposit_Interest_Posted__c</fullName>
    <description>This field stores the sum of interest posted for all the deposits. It gets updated at the time of interest posting on the contract.</description>
    <inlineHelpText>This field stores the sum of interest posted for all the deposits of the contract.</inlineHelpText>
    <label>DM Deposit Interest Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>