force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Deposit_Payment_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>DM_Deposit_Payment_Offset_Days__c</fullName>
    <description>This field stores the value of offset days after which deposit amount should be considered for payment in case of failure of default payment setup like APS</description>
    <inlineHelpText>This field stores the value of offset days after which deposit amount should be considered for payment in case of failure of default payment setup like APS</inlineHelpText>
    <label>DM Deposit Payment Offset Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>