force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Disbursal_By_Bank_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Disbursal_By_Bank_Date__c</fullName>
    <label>DM Disbursal By Bank Date</label>
    <type>Date</type>
</CustomField>