force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Disbursal_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Disbursal_Status__c</fullName>
    <label>DM Disbursal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Disbursal</fullName>
            </value>
            <value>
                <fullName>Partially Disbursed</fullName>
            </value>
            <value>
                <fullName>Fully Disbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>