force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Discount__c.field-meta.xml
<CustomField>
    <fullName>DM_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This discount will be used at the time of paying off of amortization based loans.</description>
    <inlineHelpText>This discount will be used at the time of paying off of amortization based loans.</inlineHelpText>
    <label>DM Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>