force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Discount_Applied_On__c.field-meta.xml
<CustomField>
    <fullName>DM_Discount_Applied_On__c</fullName>
    <label>DM Discount Applied On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>