force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Discounting_Based_Payoff__c.field-meta.xml
<CustomField>
    <fullName>DM_Discounting_Based_Payoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Discounting Based Payoff</label>
    <type>Checkbox</type>
</CustomField>