force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Draw_Period_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Draw_Period_Billing_Method__c</fullName>
    <description>Deprecated</description>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>DM Draw Period Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>