force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Draw_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Draw_Period_End_Date__c</fullName>
    <description>Draw Period End Date</description>
    <inlineHelpText>Draw Period End Date is the date for the full/final disbursement</inlineHelpText>
    <label>DM Draw Period End Date</label>
    <type>Date</type>
</CustomField>