force-app/main/default/objects/DM_Loan_Account__c/fields/DM_draw_term__c.field-meta.xml
<CustomField>
    <fullName>DM_draw_term__c</fullName>
    <description>Draw Term</description>
    <inlineHelpText>This is the period in which the amount can be disbursed to the customer.</inlineHelpText>
    <label>DM Draw Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>