force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Draw_Term_Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>DM_Draw_Term_Payment_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For Line of Credit</description>
    <label>DM Draw Term Payment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>