force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>DM_Due_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Day for the loan account.</description>
    <inlineHelpText>The day on which the loan payment is due.</inlineHelpText>
    <label>DM Current Due Day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>