force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Early_Pre_Payment_Penalty_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DM_Early_Pre_Payment_Penalty_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked and account is passed it&#39;s maturity date then we do not asses pre payment penalty fees.</description>
    <label>DM Early Pre Payment Penalty Indicator</label>
    <type>Checkbox</type>
</CustomField>