force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Eligible_For_Payoff__c.field-meta.xml
<CustomField>
    <fullName>DM_Eligible_For_Payoff__c</fullName>
    <description>Check if the loan contract is eligible for loan payoff.</description>
    <formula>DM_Fees_Remaining__c +  DM_Interest_Remaining__c +  DM_Principal_Remaining__c &lt;=  DM_Excess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check if the loan contract is eligible for loan payoff.</inlineHelpText>
    <label>DM Eligible For Payoff</label>
    <type>Checkbox</type>
</CustomField>