force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Expected_Repayment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Expected_Repayment_Start_Date__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <inlineHelpText>This will be the date from when the customer will be start making the payments on this contract. The first payment date will be derived from payment start date.</inlineHelpText>
    <label>DM Payment Start Date</label>
    <type>Date</type>
</CustomField>