force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fee_Accrued__c.field-meta.xml
<CustomField>
    <fullName>DM_Fee_Accrued__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>DM Fee Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>