force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fee_Remaining__c.field-meta.xml
<CustomField>
    <fullName>DM_Fee_Remaining__c</fullName>
    <label>DM Fee Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>