force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fee_Set__c.field-meta.xml
<CustomField>
    <fullName>DM_Fee_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Fee Set</label>
    <referenceTo>loan__Fee_Set__c</referenceTo>
    <relationshipLabel>DM CL Contract</relationshipLabel>
    <relationshipName>DM_CL_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>