force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fees_Billed__c.field-meta.xml
<CustomField>
    <fullName>DM_Fees_Billed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This captures the total fees billed which is calculated at the time of billing.</description>
    <inlineHelpText>This captures the total fees billed which is calculated at the time of billing.</inlineHelpText>
    <label>DM Fees Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>