force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_Fees_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fees Paid</description>
    <inlineHelpText>Fees Paid</inlineHelpText>
    <label>DM Fees Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>