force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>DM_Fees_Remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fees Remaining</description>
    <inlineHelpText>Fees remaining</inlineHelpText>
    <label>DM Fees Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>