force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fees_Suspended__c.field-meta.xml
<CustomField>
    <fullName>DM_Fees_Suspended__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Denotes the total fees amount, which has been suspended.</description>
    <inlineHelpText>Denotes the total fees amount, which has been suspended.</inlineHelpText>
    <label>DM Fees Suspended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>