force-app/main/default/objects/DM_Loan_Account__c/fields/DM_First_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_First_Installment_Date__c</fullName>
    <description>Date of the first installment</description>
    <inlineHelpText>This is the desired start date of the repayment schedule that is provided while creating the loan application.</inlineHelpText>
    <label>DM First Payment Date</label>
    <type>Date</type>
</CustomField>