force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Floating_Rate_Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Floating_Rate_Revision_Date__c</fullName>
    <description>Date on which floating rate for a contract will be revised (if applicable).</description>
    <inlineHelpText>Date on which floating rate for a contract will be revised (if applicable).</inlineHelpText>
    <label>DM Floating Rate Revision Date</label>
    <type>Date</type>
</CustomField>