force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Floating_Rate_Revision_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_Floating_Rate_Revision_Frequency__c</fullName>
    <description>This field defines floating interest rate revision frequency. Interest rate on floating rate loans will be revised on this selected frequency.</description>
    <inlineHelpText>This field defines floating interest rate revision frequency. Interest rate on floating rate loans will be revised on this selected frequency.</inlineHelpText>
    <label>DM Floating Rate Revision Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Daily</fullName>
            </value>
            <value>
                <fullName>DM_Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Billing Frequency</fullName>
                <default>true</default>
                <label>DM_Billing Frequency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>