force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Fractionalization_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Fractionalization_Status__c</fullName>
    <description>Describes whether loan is activated for Fractionalization.</description>
    <label>DM Fractionalization Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Pending</fullName>
                <default>true</default>
                <label>DM_Pending</label>
            </value>
            <value>
                <fullName>DM_Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>