force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Frequency_of_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>DM_Frequency_of_Loan_Payment__c</fullName>
    <inlineHelpText>This decides the Payment Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly
Quarterly
Semi-Annual
Annual
Single-Payment</inlineHelpText>
    <label>DM Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Daily</fullName>
            </value>
            <value>
                <fullName>DM_Weekly</fullName>
            </value>
            <value>
                <fullName>DM_Bi-weekly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Monthly</fullName>
                <default>true</default>
                <label>DM_Monthly</label>
            </value>
            <value>
                <fullName>DM_Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Quarterly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Annual</fullName>
            </value>
            <value>
                <fullName>DM_Annual</fullName>
            </value>
            <value>
                <fullName>DM_Single-Payment</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Monthly-PD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>