force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Funding_in_Tranches__c.field-meta.xml
<CustomField>
    <fullName>DM_Funding_in_Tranches__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked, if Funding in Tranches is allowed</inlineHelpText>
    <label>DM Funding in Tranches</label>
    <type>Checkbox</type>
</CustomField>