force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Ignore_Waiver_For_Rebate__c.field-meta.xml
<CustomField>
    <fullName>DM_Ignore_Waiver_For_Rebate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, borrower will be rebated whether or not protect claim was raised.</description>
    <inlineHelpText>When checked, borrower will be rebated whether or not protect claim was raised.</inlineHelpText>
    <label>DM Ignore Waiver For Rebate</label>
    <type>Checkbox</type>
</CustomField>