force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Include_In_Buyback_Process__c.field-meta.xml
<CustomField>
    <fullName>DM_Include_In_Buyback_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if this contract must be included in the buy back process.</description>
    <inlineHelpText>This field is used to indicate if this contract must be included in the buy back process.</inlineHelpText>
    <label>DM Include In Buyback Process</label>
    <type>Checkbox</type>
</CustomField>