force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Include_In_Metro2_File__c.field-meta.xml
<CustomField>
    <fullName>DM_Include_In_Metro2_File__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Metro 2 Format is the current standard electronic data reporting format for credit. You can generate a Metro 2 file only when &#39;Include in Metro 2 file&#39; is checked..</inlineHelpText>
    <label>DM Include In Credit Reporting</label>
    <type>Checkbox</type>
</CustomField>