force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Income_Suspended__c.field-meta.xml
<CustomField>
    <fullName>DM_Income_Suspended__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Income Suspended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>