force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Index_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Index Rate of the Floating Interest Rate Type Loan Product</inlineHelpText>
    <label>DM Current Index Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>