force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Accrued_Not_Due__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Accrued_Not_Due__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This field gets updated on Payment Date. It is the accrued interest that is posted on the account.</description>
    <inlineHelpText>Interest balance as of last accrual date.</inlineHelpText>
    <label>DM Interest Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>