force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Accrued_On_Investment_Loans__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Accrued_On_Investment_Loans__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is used to track the interest accrued on Investments loan, which does not match to the interest accrued for normal loans.</description>
    <label>DM Interest Accrued On Investment Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>