force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Donated__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Donated__c</fullName>
    <label>DM Interest Donated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>