force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_estimated__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_estimated__c</fullName>
    <inlineHelpText>Estimated Interest as per the Contract.</inlineHelpText>
    <label>DM Estimated Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>