force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_On_Overdue_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_On_Overdue_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest on overdue amount paid so far.</description>
    <inlineHelpText>Interest on overdue amount paid so far.</inlineHelpText>
    <label>DM Interest On Overdue Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>