force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_On_Total_Overdue__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_On_Total_Overdue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest on total overdue</description>
    <inlineHelpText>Interest on total overdue</inlineHelpText>
    <label>DM Interest On Total Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>