force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Only_Payment_Amt__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Only_Payment_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For Fixed payments the constant amount for Interest only period is taken as input</description>
    <label>DM Interest Only Payment Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>