force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Payback__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Payback__c</fullName>
    <label>DM Interest Payback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>