force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Period_Calculation__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Period_Calculation__c</fullName>
    <description>This fields will is used to decide whether to consider start date for a period or not in interest calculation</description>
    <inlineHelpText>This fields will is used to decide whether to consider start date for a period or not in interest calculation</inlineHelpText>
    <label>DM Interest Period Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Include Start Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>