force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Posted__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Posted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest Posted on account</description>
    <inlineHelpText>Interest Posted on account.</inlineHelpText>
    <label>DM Interest Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>