force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Posting_Day__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Posting_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest Posting Day for the loan account.</description>
    <inlineHelpText>The day on which the loan payment is due.</inlineHelpText>
    <label>DM Interest Posting Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>