force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate__c</fullName>
    <description>Interest Rate</description>
    <inlineHelpText>Rate of Interest for the loan.</inlineHelpText>
    <label>DM Current Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>