force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Rate_Change_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate_Change_Method__c</fullName>
    <description>When interest rate is changed, the repayment schedule of the loans will be regenerated either by changing the payment amount or keeping the payment amount same based on this setup option.</description>
    <inlineHelpText>When interest rate is changed, the repayment schedule of the loans will be regenerated either by changing the payment amount or keeping the payment amount same based on this setup option.</inlineHelpText>
    <label>DM Interest Rate Change Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Change Payment Amount</fullName>
            </value>
            <value>
                <fullName>DM_Keep Same Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>